# django-impersonate-permissions

./: .coveragerc  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
impersonate_permissions/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  settings.py
impersonate_permissions/migrations/: 0001_initial.py
impersonate_permissions/templates/impersonate_permissions/: expired.tpl  impersonated.tpl  impersonating.tpl
tests/: settings.py  test_context_processors.py  test_middleware.py  test_models.py  urls.py  views.py
tests/migrations/: 0001_initial.py
tests/templates/: index.html
