[tool.poetry]
name = "django-impersonate-permissions"
version = "0.1.2.dev0"
description = "Django app that tracks user permssions when using django-impersonate."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-impersonate-permissions"
repository = "https://github.com/yunojuno/django-impersonate-permissions"
documentation = "https://github.com/yunojuno/django-impersonate-permissions"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "impersonate_permissions" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.0"
django-impersonate = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = "=19.10b0"
freezegun = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
